# kstreams

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.benchmarks/Darwin-CPython-3.11-64bit/: 0001_8a7432129b462fb2ee4297789fbd15a3b88b07d1_20241121_133526_uncommited-changes.json  0001_a21803ba4cdbcba27f6b9b49880cc8615996c778_20241126_143811_uncommited-changes.json  0002_81eb783e807835e049815241011f694a54404471_20241127_140629_uncommited-changes.json  0002_da9cb25b0f84535841637d318f379657f4a1f632_20241127_132937_uncommited-changes.json  0003_ce85f3617c6291590250df4dd5247280067a4773_20241230_173342_uncommited-changes.json
.benchmarks/Linux-CPython-3.10-64bit/: 0001_0192fcc771e53d2e05903d956c45a99014aac635_20241122_120704.json  0001_0c6c0e2fd83043828399a587272b5c5a21bc91a5_20241126_150242.json  (+2 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
backends/: index.html
clients/: index.html
configuration/: index.html
docs/: backends.md  clients.md  configuration.md  engine.md  getting_started.md  index.md  large_project_structure.md  metrics.md  middleware.md  monitoring.md  rebalance_listener.md  serialization.md  stream.md  test_client.md  transactions.md  utils.md
engine/: index.html
examples/: README.md  consume_multiple_topics.py  json_serialization.py  simple.py
examples/confluent-example/: README.md  docker-compose.yaml  pyproject.toml
examples/confluent-example/confluent_example/: app.py  middlewares.py  schemas.py  serializers.py
examples/confluent-example/confluent_example/streaming/: engine.py  streams.py
examples/consume-multiple-topics-example/: README.md  pyproject.toml
examples/consume-multiple-topics-example/consume_multiple_topics_example/: app.py
examples/dataclasses-avroschema-example/: README.md  pyproject.toml
examples/dataclasses-avroschema-example/dataclasses_avroschema_example/: app.py  middlewares.py  models.py  serializers.py
examples/dlq-middleware/: README.md  pyproject.toml
examples/dlq-middleware/dlq_middleware/: app.py
examples/fastapi-example/: README.md  pyproject.toml
examples/fastapi-example/fastapi_example/: __main__.py  app.py
examples/fastapi-example/fastapi_example/streaming/: engine.py  streams.py
examples/fastapi-sse/: README.md  pyproject.toml
examples/fastapi-sse/fastapi_sse/: __main__.py  app.py
examples/fastapi-sse/fastapi_sse/streaming/: streams.py
examples/fastapi-webapp/: README.md  pyproject.toml
examples/fastapi-webapp/fastapi_webapp/: __main__.py  app.py  streams.py  views.py
examples/graceful-shutdown-example/: README.md  pyproject.toml
examples/graceful-shutdown-example/graceful_shutdown_example/: app.py
examples/joker-middleware-example/: README.md  pyproject.toml
examples/joker-middleware-example/joker_middleware_example/: app.py
examples/json-serialization/: README.md  pyproject.toml
examples/json-serialization/src/json_serialization/: app.py  serializers.py
examples/memory-backend/: README.md  pyproject.toml
examples/memory-backend/memory_backend/: app.py
examples/recommended-usage/: README.md  pyproject.toml
examples/recommended-usage/recommended_usage/: resources.py
examples/recommended-worker-app/: README.md  pyproject.toml
examples/recommended-worker-app/recommended_worker_app/: app.py  resources.py  streams.py  streams_roster.py
examples/rqlite-example/: docker-compose.yaml  pyproject.toml
examples/rqlite-example/rqlite_example/: app.py  df.py  models.py  resources.py  streams.py
examples/send-many/: README.md  pyproject.toml
examples/send-many/src/send_many/: app.py
examples/simple-consumer-example/: README.md  pyproject.toml
examples/simple-consumer-example/simple_consumer_example/: app.py
examples/sse/: README.md  pyproject.toml
examples/sse/src/: __main__.py  app.py
examples/sse/src/streaming/: streams.py
examples/sse/sse/: __main__.py  app.py
examples/sse/sse/streaming/: engine.py
examples/ssl-example/: README.md  docker-compose.yaml  pyproject.toml
examples/ssl-example/scripts/cluster/: start
examples/ssl-example/scripts/ssl/: clean  create-ca-certificate  create-client-certificates  create-server-certificate  export-env-variables  ssl-setup
examples/ssl-example/ssl_example/: app.py  resources.py  streams.py
examples/stream-with-manual-commit/: README.md  pyproject.toml
examples/stream-with-manual-commit/stream_with_manual_commit/: app.py
examples/stream-with-rebalance-listener/: README.md  pyproject.toml
examples/stream-with-rebalance-listener/stream_with_rebalance_listener/: app.py
examples/subscribe-topics-by-pattern/: README.md  pyproject.toml
examples/subscribe-topics-by-pattern/subscribe_topics_by_pattern/: app.py
examples/transactions/: README.md  docker-compose.yaml  pyproject.toml
examples/transactions/scripts/cluster/: stop
examples/transactions/tests/: test_app.py
examples/transactions/transactions/: app.py  engine.py  producer.py  serializers.py  streams.py
getting_started/: index.html
kstreams/: __init__.py  batch.py  clients.py  conf.py  consts.py  create.py  custom_types.py  engine.py  exceptions.py  parameters.py  rebalance_listener.py  serializers.py  streams.py  streams_utils.py  structs.py  transaction.py  types.py  typing.py  utils.py
large_project_structure/: index.html
metrics/: index.html
middleware/: index.html
monitoring/: index.html
rebalance_listener/: index.html
scripts/: bench  bench-compare  bench-current  format  install  lint  publish  test
search/: search_index.json
serialization/: index.html
stream/: index.html
test_client/: index.html
tests/: __init__.py  conftest.py  test_async_gen.py  test_backend_kafka.py  test_benchmarks.py  test_client.py  test_consumer.py  test_engine_hooks.py  test_kstreams.py  test_monitor.py  test_param_headers.py  test_producer.py  test_send_batch.py  test_serialization.py  test_stream_engine.py  test_streams.py  test_streams_error_policy.py  test_transactions.py
utils/: index.html
(+387 files in other folders)
