[tool.poetry]
name = "dataclasses-avroschema-example"
version = "0.1.0"
description = ""
authors = ["Marcos Schroh <marcos.schroh@kpn.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kstreams = "^0.2.1"
dataclasses-avroschema = "^0.30.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "dataclasses_avroschema_example.app:main"
