[tool.poetry]
name = "dataclasses-avroschema-example"
version = "0.1.0"
description = ""
authors = ["Marcos Schroh <marcos.schroh@kpn.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kstreams = { path = "../../.", develop = true }
dataclasses-avroschema = "^0.30.0"
aiorun = "^2022.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "dataclasses_avroschema_example.app:main"
