[tool.poetry]
name = "dataclasses-avroschema-example"
version = "0.1.0"
description = ""
authors = ["Marcos Schroh <marcos.schroh@kpn.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kstreams = { path = "../../.", develop = true }
aiorun = "^2024.5.1"
dataclasses-avroschema = {version = "^0.56.1", extras = ["faker"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "dataclasses_avroschema_example.app:main"
