[tool.poetry]
name = "dlq-middleware"
version = "0.1.0"
description = ""
authors = ["Marcos Schroh <marcos.schroh@kpn.com>"]
readme = "README.md"
packages = [{include = "dlq_middleware"}]

[tool.poetry.dependencies]
python = "^3.8"
kstreams = { path = "../../.", develop = true }
aiorun = "^2024.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "dlq_middleware.app:main"