[tool.poetry]
name = "fastapi_sse"
version = "0.1.0"
description = "SSE example with kstreams"
authors = ["Marcos Schroh <marcos.schroh@kpn.com>"]


[tool.poetry.dependencies]
python = "^3.10"
sse-starlette = "^1.8.2"
kstreams = { path = "../../.", develop = true }
uvicorn = "^0.18.2"
fastapi = "^0.109.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "fastapi_sse.__main__:main"
