[tool.poetry]
name = "fastapi_webapp"
version = "0.1.0"
description = ""
authors = ["Marcos Schroh <marcos.schroh@kpn.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.112"
kstreams = { path = "../../.", develop = true }
starlette-prometheus = "^0.9.0"
uvicorn = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "fastapi_webapp.__main__:main"
