[tool.poetry]
name = "joker-middleware-example"
version = "0.1.0"
description = ""
authors = ["Marcos Schroh <marcos.schroh@kpn.com>"]
readme = "README.md"
packages = [{include = "joker_middleware_example"}]

[tool.poetry.dependencies]
python = "^3.10"
kstreams = { path = "../../.", develop = true }
aiorun = "^2024.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "joker_middleware_example.app:main"
