[tool.poetry]
name = "json-serialization"
version = "0.1.0"
description = ""
authors = ["Marcos Schroh <marcos.schroh@kpn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiorun = "^2024.5.1"
kstreams = { path = "../../.", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "json_serialization.app:main"
