[tool.poetry]
name = "recommended_worker_app"
version = "0.1.0"
description = ""
authors = ["Santiago Fraire <santiago.fraire@kpn.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiorun = "^2024.5.1"
kstreams = { path = "../../.", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
app = "recommended_worker_app.app:main"