[tool.poetry]
name = "send-many"
version = "0.1.0"
description = ""
authors = ["Marcos Schroh <marcos.schroh@kpn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
kstreams = { path = "../../.", develop = true }
aiorun = "^2025.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "send_many.app:main"
