[project]
name = "send-many"
version = "0.1.0"
description = ""
authors = [
    {name = "marcosschroh",email = "schrohm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiorun (>=2025.1.1,<2026.0.0)"
]

[tool.poetry]
packages = [{include = "send_many", from = "src"}]

[tool.poetry.dependencies]
kstreams = { path = "../../.", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "send_many.app:main"
