[tool.poetry]
name = "simple-consumer-example"
version = "0.1.0"
description = ""
authors = ["Reid Meyer <reid.meyer@kpn.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiorun = "^2022.4.1"
kstreams = { path = "../../.", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
app = "simple_consumer_example.app:main"