[tool.poetry]
name = "sse"
version = "0.1.0"
description = "SSE example with kstreams"
authors = ["Marcos Schroh <marcos.schroh@kpn.com>"]


[tool.poetry.dependencies]
python = "^3.8"
sse-starlette = "^0.10.3"
kstreams = { path = "../../.", develop = true }
uvicorn = "^0.18.2"
fastapi = "^0.78.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
