[tool.poetry]
name = "stream-with-manual-commit"
version = "0.1.0"
description = ""
authors = ["Marcos Schroh <marcos.schroh@kpn.com>"]
readme = "README.md"
packages = [{include = "stream_with_manual_commit"}]

[tool.poetry.dependencies]
python = "^3.10"
aiorun = "^2024.5.1"
kstreams = { path = "../../.", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "stream_with_manual_commit.app:main"
