[tool.poetry]
name = "subscribe-topics-by-pattern"
version = "0.1.0"
description = ""
authors = ["Marcos Schroh <schrohm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiorun = "^2024.5.1"
kstreams = { path = "../../.", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
app = "subscribe_topics_by_pattern.app:main"
