[tool.poetry]
name = "transactions"
version = "0.1.0"
description = ""
authors = ["marcosschroh <schrohm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kstreams = { path = "../../.", develop = true }
aiorun = "^2025.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "transactions.app:main"
